refactor: 重构各模块引入Repository层，移除冗余中间服务
将article、auth、chat、content、file、follow模块的数据访问逻辑抽取为独立的Repository层，
删除BlogArticle*、File*、SysUserFollow等冗余中间服务接口及实现，服务层改为直接依赖Repository。
同步更新所有模块的测试代码及项目文档。

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>